--- a/Makefile.clang.example
+++ b/Makefile.clang.example
@@ -2,11 +2,11 @@
 #  put all your .c and .h files in one directory
 #  copy this file into directory and name it Makefile
 #  set 'libs' to list of static library dependencies
-#  set 'tools' to names of output binaries
+#  set 'targets' to names of output binaries
 #    each binary should have corresponding .c file
 #  run 'make' or 'make <binary>'
 
-tools = 
+targets = 
 libs = 
 cc = clang
 ld = clang
@@ -17,17 +17,17 @@ sources = $(wildcard *.c)
 headers = $(wildcard *.h)
 objects = $(patsubst %.c,%.o,$(sources))
 
-main-objects = $(patsubst %,%.o,$(tools))
+main-objects = $(patsubst %,%.o,$(targets))
 filtered-objects = $(filter-out $(main-objects),$(objects))
 
 default: build
 
 clean:
-	rm -fr $(tools) *.o
+	rm -fr $(targets) *.o
 
-build: $(tools)
+build: $(targets)
 
-$(tools): %: %.o $(filtered-objects)
+$(targets): %: %.o $(filtered-objects)
 	$(ld) $(lflags) $^ -o $@
 
 $(objects): %.o: %.c $(headers)
